Fixed the gap issue for desktop computer;changed movie-card padding top

--- a/src/Components/Feature.css
+++ b/src/Components/Feature.css
@@ -42,6 +42,7 @@
   color: #4c7dd4;
   text-align: center;
   border-radius: 10px;
+  margin-top: -150px;
   padding: 10px;
   width: 30%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
