--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -6,7 +6,7 @@
   background-color: black;
   position: fixed;
   top: 0;
-  width: 90%;
+  width: 100%;
   z-index: 1000;
 }
 
